<resources>
    <string name="app_name">21壁纸</string>
    <string name="app_name_short">21壁纸</string>
    <string name="search">搜索</string>
    <string name="about">关于</string>
    <string name="exit_app">退出</string>
    <string name="pick">裁剪</string>
    <string name="multi">多选</string>
    <string name="business_card">名片</string>
    <string name="desktop_widget">桌面部件</string>
    <string name="dynamic_desktop_widget">动态桌面部件</string>
    <string name="tutorial">教程</string>
    <string name="fonts">字体</string>
    <string name="specific_symbol">特殊符号</string>

    <string name="business_card_make">名片制作：在背景图的四角和中间位置添加文字内容。背景原图推荐您选择通过本软件裁剪制作的壁纸，效果更好。</string>
    <string name="hint_sour_pic_title">背景原图（单击更换背景图）</string>
    <string name="build_in_white">内置白色</string>
    <string name="build_in_transparent">内置透明</string>
    <string name="hint_font_size">字体大小：默认36sp</string>
    <string name="hint_font_size_corner">四角内容字体大小：默认36sp</string>
    <string name="hint_font_size_center">中间内容字体大小：默认36sp</string>
    <string name="hint_left_top">左上角内容（可不填）</string>
    <string name="hint_left_bottom">左下角内容（可不填）</string>
    <string name="hint_right_top">右上角内容（可不填）</string>
    <string name="hint_right_bottom">右下角内容（可不填）</string>
    <string name="hint_center">中间内容（可换行，按输入法换行键即可）</string>
    <string name="add_stamp_edge">添加邮票边框</string>
    <string name="generate_preview">生成预览</string>
    <string name="preview">预览</string>
    <string name="save_preview">保存预览</string>

    <string name="downloading">下载中(..•˘_˘•..)</string>
    <string name="download_success">下载完成\(≥▽≤)/</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>

    <string-array name="font_color">
        <item>默认黑色</item>
        <item>黑色</item>
        <item>白色</item>
        <item>灰色</item>
        <item>深灰</item>
        <item>亮灰</item>
        <item>红色</item>
        <item>黄色</item>
        <item>绿色</item>
        <item>青色</item>
        <item>蓝色</item>
        <item>紫红</item>
    </string-array>

    <string-array name="typeface">
        <item>系统默认</item>
    </string-array>
    <string name="title_activity_pic">PicActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="do_not_click_me">别点了，喝杯茶吧( ´･ω･`)_且</string>

    <string name="four_corner_font">四角字体</string>
    <string name="center_font">中间字体</string>
    <string name="font_color">字体颜色</string>

    <string name="pic_name">图片名称</string>

    <string name="switch_widget_bg">切换图片</string>
    <string name="switch_clock_color">切换时间颜色</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="appwidget_dynamic">别戳我了(*/ω＼*)，我自己动还不行吗</string>
    <string name="apply_bg_failed">更换桌面部件背景图片失败</string>
    <string name="apply_bg_succeed">更换桌面部件背景图片成功</string>
    <string name="set_bg_rule">使用本功能之前，请先在桌面或者负一屏添加本应用的静态背景桌面部件，部件图标与应用相同。
        目前桌面部件只支持更换png格式的背景图，为了保证显示效果，请您优先选择您制作或者下载的壁纸，即/sdcard/TwentyOne目录下的图片。
    </string>
    <string name="how_to_add_appwidget">如何添加桌面部件：长按桌面部件空白处，从部件列表选择本应用的部件，长按，拖动到桌面上。</string>
    <string name="about_dynamic_widget">关于动态桌面部件：\n
        app更新后，如果出现以下bug，请删除并重新创建动态部件：\n
        1、部件中的时间不见了；\n
        2、部件点击没反应。\n
        \n如果正常使用过程中，动态部件不动了，请点击动态部件即可重新让动态部件动起来。
    </string>
    <string name="how_to_use_dynamic_widget">在添加动态桌面部件之前：\n
        1、MIUI用户请把本应用锁定在后台；\n
        2、原生/类原生系统用户，请把本应用锁定在后台，并在系统设置--->电池--->电池优化--->单击本应用图标，选择不优化本应用；\n
        如果您使用了诸如黑域、绿色守护等后台管理应用，请把本应用添加进白名单。
    </string>
</resources>
