<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sour_pic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_sour_pic_title" />

        <ImageView
            android:id="@+id/sour_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <EditText
            android:id="@+id/font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_font_size"/>

        <EditText
            android:id="@+id/left_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_left_top"/>

        <EditText
            android:id="@+id/left_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_left_bottom"/>

        <EditText
            android:id="@+id/right_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_right_top"/>

        <EditText
            android:id="@+id/right_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_right_bottom"/>

        <EditText
            android:id="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_center"/>

        <Button
            android:id="@+id/make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_preview" />

        <TextView
            android:id="@+id/watermark_pic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview" />

        <ImageView
            android:id="@+id/wartermark_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_preview" />
    </LinearLayout>

</ScrollView>