<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:visible="false"/>

    <item
        android:id="@+id/pick"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/pick"/>

    <item
        android:id="@+id/business_card"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/business_card"/>

    <item
        android:id="@+id/tutorial"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/tutorial"/>

    <!--<item
        android:id="@+id/fonts"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/fonts"/>-->

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/about"/>
</menu>