<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pick"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pick" />
        <item
            android:id="@+id/nav_business_card"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/business_card" />

    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/tutorial" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
